--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "jade": "~0.28.2",
-    "i18n": "~0.3.8"
+    "i18n": "~0.3.8",
+    "sugar": "~1.3.8",
+    "optimist": "~0.3.5",
+    "clog": "~0.1.6"
   },
   "devDependencies": {},
   "scripts": {
