--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "i18n": "~0.3.8",
     "sugar": "~1.3.8",
     "optimist": "~0.3.5",
-    "clog": "~0.1.6"
+    "clog": "~0.1.6",
+    "string-format": "~0.2.1"
   },
   "devDependencies": {},
   "scripts": {
