--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "i18n": "~0.3.8",
     "sugar": "~1.3.8",
     "optimist": "~0.3.5",
-    "clog": "~0.1.6",
-    "string-format": "~0.2.1"
+    "string-format": "~0.2.1",
+    "clog": "git://github.com/PlasticPanda/clog.git"
   },
   "devDependencies": {},
   "scripts": {
