--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/PlasticPanda/li.i18n.git"
+    "url": "https://github.com/PlasticPanda/jade-i18n.js.git"
   },
   "keywords": [
     "i18n",
