--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "optimist": "~0.3.5",
     "string-format": "~0.2.1",
     "clog": "git://github.com/PlasticPanda/clog.git",
-    "mkdirp": "~0.3.5"
+    "mkdirp": "~0.3.5",
+    "coolog": "~2.1.2",
+    "marked": "~0.2.9"
   },
   "devDependencies": {},
   "scripts": {
