--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jade-i18n.js",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Static i18-d website generator",
   "main": "jade-i18n.js",
   "bin": {
@@ -15,8 +15,8 @@
     "mkdirp": "~0.3.5",
     "marked": "~0.2.9",
     "clog": "~0.1.6",
-    "async": "~0.2.9",
-    "node-swallow": "0.0.3"
+    "node-swallow": "0.0.3",
+    "seq": "~0.3.5"
   },
   "devDependencies": {},
   "scripts": {
